@@ -409,8 +409,11 @@ enum wxLocaleInfo
 enum wxLocaleInitFlags
 {
     wxLOCALE_DONT_LOAD_DEFAULT = 0x0000,     // don't load wxwin.mo
-    wxLOCALE_LOAD_DEFAULT      = 0x0001,     // load wxwin.mo?
-    wxLOCALE_CONV_ENCODING     = 0x0002      // convert encoding on the fly?
+    wxLOCALE_LOAD_DEFAULT      = 0x0001      // load wxwin.mo?
+#if WXWIN_COMPATIBILITY_2_8
+   ,wxLOCALE_CONV_ENCODING     = 0x0002      // no longer used, simply remove
+                                             // it from the existing code
+#endif
 };
 
 class WXDLLIMPEXP_BASE wxLocale
@@ -426,8 +429,11 @@ public:
     wxLocale(const wxString& name,                               // name (for messages)
              const wxString& shortName = wxEmptyString,      // dir prefix (for msg files)
              const wxString& locale = wxEmptyString,     // locale (for setlocale)
-             bool bLoadDefault = true,                           // preload wxstd.mo?
-             bool bConvertEncoding = false)                      // convert Win<->Unix if necessary?
+             bool bLoadDefault = true                            // preload wxstd.mo?
+#if WXWIN_COMPATIBILITY_2_8
+             ,bool bConvertEncoding = true                      // convert Win<->Unix if necessary?
+#endif
+             )
         {
             DoCommonInit();
 
@@ -435,7 +441,7 @@ public:
         }
 
     wxLocale(int language, // wxLanguage id or custom language
-             int flags = wxLOCALE_LOAD_DEFAULT | wxLOCALE_CONV_ENCODING)
+             int flags = wxLOCALE_LOAD_DEFAULT)
         {
             DoCommonInit();
 
@@ -446,12 +452,15 @@ public:
     bool Init(const wxString& name,
               const wxString& shortName = wxEmptyString,
               const wxString& locale = wxEmptyString,
-              bool bLoadDefault = true,
-              bool bConvertEncoding = false);
+              bool bLoadDefault = true
+#if WXWIN_COMPATIBILITY_2_8
+              ,bool bConvertEncoding = true
+#endif
+              );
 
         // same as second ctor (returns true on success)
     bool Init(int language = wxLANGUAGE_DEFAULT,
-              int flags = wxLOCALE_LOAD_DEFAULT | wxLOCALE_CONV_ENCODING);
+              int flags = wxLOCALE_LOAD_DEFAULT);
 
         // restores old locale
     virtual ~wxLocale();
@@ -591,8 +600,6 @@ private:
     wxLocale      *m_pOldLocale;      // previous wxLocale
 
     wxMsgCatalog  *m_pMsgCat;         // pointer to linked list of catalogs
-
-    bool           m_bConvertEncoding;
 
     bool           m_initialized;
 
